; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_task.c_task_purgable_info.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_task.c_task_purgable_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TASK_NULL = common dso_local global i64 0, align 8
@KERN_INVALID_ARGUMENT = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @task_purgable_info(i64 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i64 %0, i64* %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @TASK_NULL, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load i32*, i32** %5, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %14

12:                                               ; preds = %9, %2
  %13 = load i32, i32* @KERN_INVALID_ARGUMENT, align 4
  store i32 %13, i32* %3, align 4
  br label %24

14:                                               ; preds = %9
  %15 = load i64, i64* %4, align 8
  %16 = call i32 @task_reference(i64 %15)
  %17 = load i32*, i32** %5, align 8
  %18 = ptrtoint i32* %17 to i32
  %19 = load i64, i64* %4, align 8
  %20 = call i32 @vm_purgeable_stats(i32 %18, i64 %19)
  %21 = load i64, i64* %4, align 8
  %22 = call i32 @task_deallocate(i64 %21)
  %23 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %14, %12
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @task_reference(i64) #1

declare dso_local i32 @vm_purgeable_stats(i32, i64) #1

declare dso_local i32 @task_deallocate(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
